JumpScript/tests/baselines/reference/unusedParameterProperty1.errors.txt
tests/cases/compiler/unusedParameterProperty1.jump(2,25): error TS6138: Property 'used' is declared but its value is never read.
tests/cases/compiler/unusedParameterProperty1.jump(3,13): error TS6133: 'foge' is declared but its value is never read.


==== tests/cases/compiler/unusedParameterProperty1.jump (2 errors) ====
    class A {
        constructor(private used: string) {
                            ~~~~
!!! error TS6138: Property 'used' is declared but its value is never read.
            let foge = used;
                ~~~~
!!! error TS6133: 'foge' is declared but its value is never read.
            foge += "";
        }
    }
    